samples/_failures_safe/1761480060_f687d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e15cc814.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e15cc814.c:156:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  156 |     Token eof_token
      |     ^~~~~
./samples/SAFE/__tmp_e15cc814.c:156:5: error: expected declaration or statement at end of input
